--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -3,6 +3,8 @@ FROM python:3-alpine
 ENV PYTHONUNBUFFERED=1
 WORKDIR /usr/src/app
 COPY requirements.txt /usr/src/app/
+RUN apt install python3.6-dev
+RUN python -m pip install --upgrade pip
 RUN pip install -U -r requirements.txt
 COPY ./web /usr/src/app/
 COPY ./entrypoint.sh /
