--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,15 +1,13 @@
 FROM python:3.10.13-bookworm
-
+ENV PYTHONUNBUFFERED=1
 RUN apt-get update && apt-get install -y --no-install-recommends \
     libssl-dev \
     && rm -rf /var/lib/apt/lists/*
 
-COPY requirements.txt .
-RUN pip install -r requirements.txt
-
-COPY . .
-
-# Flask app so need expose 8080
-EXPOSE 8080
-
+WORKDIR /usr/src/app
+COPY requirements.txt /usr/src/app/
+RUN python -m pip install --upgrade pip
+RUN pip install -U -r requirements.txt
+COPY ./web /usr/src/app/
+COPY ./entrypoint.sh /
 ENTRYPOINT ["/entrypoint.sh"]
